@@ -25,7 +25,6 @@ import java.util.LinkedHashSet;
 import java.util.Map;
 import java.util.Set;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
@@ -99,7 +98,7 @@ public abstract class ConfigMapPropertySourceLocator implements PropertySourceLo
 				LOG.warn("Configured input path: " + p + " will be ignored because it is not a regular file");
 			}
 			return regular;
-		}).collect(Collectors.toList()).forEach(p -> {
+		}).toList().forEach(p -> {
 			try {
 				String content = new String(Files.readAllBytes(p)).trim();
 				String filename = p.toAbsolutePath().toString().toLowerCase();
